# BetArxiv

./: .coverage  .gitignore  API change plan.md  README.docker.md  README.md  README_TESTING.md  conftest.py  deployment-guide.md  docker-compose.yml  docker-test.md  env.template  ingest.py  migration_add_background.sql  prompt.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test_api.py  test_api_clients.py  test_betarxiv.py  test_new_api.py  test_real_identifiers.py  test_runner.py  test_title_search.py  verify_setup.py
.cursor/rules/: betarxiv.mdc
app/: api.py  db.py  main.py  models.py  paper_processor.py  schema.sql  utils.py  watcher.py
backend/: .dockerignore  Dockerfile
backend/app/: api.py  api_clients.py  db.py  main.py  models.py  schema.sql  utils.py
debug_pdf_texts/: 2025 - Zhang et al. - LLM-AIDSim LLM-Enhanced Agent-Based Influence Diffusion Simulation in Social Networks_first_page.txt  2025 - Zhao et al. - SiriuS Self-improving Multi-agent Systems via Bootstrapped Reasoning_first_page.txt
frontend/: .dockerignore  Dockerfile  GLOBAL_SETTINGS.md  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/documents/[id]/thumbnail/: route.ts
frontend/src/app/api/pdf/: route.ts
frontend/src/app/archive/: page.tsx
frontend/src/app/help/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/papers/[id]/: page.tsx
frontend/src/app/papers/[id]/inspect/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: ChatBox.tsx  DocumentCard.tsx  EnhancedPDFViewer.tsx  MarkdownRenderer.tsx  PDFViewer.tsx  app-layout.tsx  navigation.tsx  sidebar.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: navigation-context.tsx  settings-context.tsx
frontend/src/hooks/: useDocuments.ts  useFolders.ts  usePdfPath.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
plan/: academic research prompt.md
