[project]
name = "betarxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi[standard]",
    "google-genai",
    "httpx>=0.28.1",
    "numpy",
    "pdf2image>=1.17.0",
    "pgvector",
    "pillow>=11.2.1",
    "psycopg[binary]",
    "python-dotenv"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


